# solids-vis-1

./: .gitignore  README.md  blender_connect.py  default_image_test.py  proposal.md  pyproject.toml  requirements.txt  test.txt
.github/: CODEOWNERS
documents/: proposal.html  proposal.md
examples/: folding_plates.py  miura copy.py  miura.py  slingshot.py
media/: near_collision.mkv
src/solid_vis/: AnimatedObject.py  Scene.py  __init__.py  conn.py
src/sv/: Scene.py
sv/: AnimatedObject.py  Scene.py  __init__.py  conn.py  render_sv.py
tests/: add_cube.py  add_everything_else.py  add_sphere.py  default_image_test.py  moving_sphere.py  rotate_camera.py  save_helix.py  test_delete.py  track_sphere.py
tests/blend/: helix.blend  helix.blend1
tests/blend/blendcache_helix/: 746573745F737068657265_000021_00.bphys
